# DrugDiscovery

./: .gitattributes  .gitignore  Cargo.toml  buf.gen.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/decision-server/: Cargo.toml
apps/decision-server/src/: config.rs  lib.rs  main.rs  runtime.rs  secure_file.rs  windows_acl.rs
apps/decision-server/tests/: process.rs  runtime_config.rs  runtime_integration.rs
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: decision_ipc.rs  decision_runtime.rs  main.rs
apps/desktop/src/decision-review/: DecisionRecordAdapter.test.ts  DecisionRecordAdapter.ts  DecisionReview.test.tsx  DecisionReview.tsx  DecisionRuntimeClient.test.ts  DecisionRuntimeClient.ts  decisionReviewFixture.ts
crates/contracts/: Cargo.toml  build.rs
crates/contracts/src/: decision.rs  lib.rs  tenant.rs
crates/contracts/tests/: decision_contract.rs  tenant_contract.rs
crates/decision-grpc/: Cargo.toml
crates/decision-grpc-client/: Cargo.toml
crates/decision-grpc-client/src/: lib.rs
crates/decision-grpc-client/tests/: access_token.rs  client_config.rs  client_transport.rs
crates/decision-grpc-jwt/: Cargo.toml
crates/decision-grpc-jwt/src/: lib.rs
crates/decision-grpc-jwt/tests/: jwt_authenticator.rs
crates/decision-grpc-postgres/: Cargo.toml
crates/decision-grpc-postgres/src/: lib.rs  pool.rs
crates/decision-grpc-postgres/tests/: executor.rs  postgres_executor.rs  reader_pool.rs
crates/decision-grpc-server/: Cargo.toml
crates/decision-grpc-server/src/: config.rs  lib.rs  server.rs
crates/decision-grpc-server/tests/: server_config.rs  server_startup.rs  server_transport.rs
crates/decision-grpc/src/: lib.rs  service.rs
crates/decision-grpc/tests/: decision_service.rs  get_decision.rs
crates/decision-query/: Cargo.toml
crates/decision-query/src/: lib.rs
crates/decision-query/tests/: get_decision.rs  watch_decision.rs
crates/desktop-core/: Cargo.toml
crates/desktop-core/src/: lib.rs
crates/desktop-core/tests/: current_decision_source.rs
crates/desktop-decision-grpc/: Cargo.toml
crates/desktop-decision-grpc/src/: lib.rs  tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/tests/: decision_record.rs
crates/event-store-contracts/: Cargo.toml
crates/event-store-contracts/src/: decision_event.rs  lib.rs
crates/event-store-contracts/tests/: decision_event_persistence.rs  migration_contract.rs
crates/event-store-postgres/: Cargo.toml
crates/event-store-postgres/src/: lib.rs  reader.rs
crates/event-store-postgres/tests/: postgres_reader.rs  postgres_writer.rs
crates/plugin-contracts/: Cargo.toml
crates/plugin-contracts/src/: bindings.rs  evidence.rs  lib.rs
crates/plugin-contracts/tests/: evidence_contract.rs
crates/viz/: Cargo.toml
crates/viz/src/: lib.rs
interfaces/: bioworld-plugin.wit
migrations/: 0001_scientific_event.sql  0002_decision_event_contract.sql  0003_postgres_tenant_boundary.sql  0004_bounded_decision_envelope.sql
policies/: tool_broker.rego
proto/bioworld/v2/: decision.proto
tools/: check-generated-contracts.mjs  native-desktop.mjs  native-desktop.test.mjs  postgres-migrations.mjs  postgres-migrations.test.mjs  tauri-icons.test.mjs  validate-tauri-icons.mjs
tools/postgres/: after-0001.sql  bootstrap-roles.sql  grant-reader-access.sql  grant-writer-access.sql  verify-migrations.sql  verify-owner-boundary.sql  verify-reader-access.sql  verify-tenant-access.sql
