[workspace]
resolver = "2"
members = [
    "crates/contracts",
    "crates/domain",
    "crates/desktop-core",
    "crates/plugin-contracts",
    "crates/viz",
    "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2024"
license = "Proprietary"
rust-version = "1.95"

[workspace.dependencies]
prost = "0.14.4"
protoc-bin-vendored = "3.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tonic = { version = "0.14.6", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.6"
tonic-prost-build = { version = "0.14.6", default-features = false }
uuid = { version = "1", features = ["serde"] }
wit-bindgen = { version = "=0.59.0", default-features = false, features = ["macros", "realloc", "std"] }
