[workspace]
resolver = "2"
members = [
    "crates/contracts",
    "crates/decision-query",
    "crates/domain",
    "crates/desktop-core",
    "crates/event-store-contracts",
    "crates/event-store-postgres",
    "crates/plugin-contracts",
    "crates/viz",
    "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2024"
license = "Proprietary"
rust-version = "1.95"

[workspace.dependencies]
chrono = { version = "=0.4.45", default-features = false, features = ["serde", "std"] }
prost = "0.14.4"
protoc-bin-vendored = "3.2.0"
serde = { version = "1", features = ["derive"] }
serde_jcs = "=0.2.0"
serde_json = "1"
sha2 = "=0.10.9"
sqlparser = { version = "=0.62.0", default-features = false, features = ["std"] }
thiserror = "2"
tokio = { version = "=1.53.0", default-features = false }
tokio-postgres = { version = "=0.7.18", default-features = false, features = ["runtime", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tonic = { version = "0.14.6", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.6"
tonic-prost-build = { version = "0.14.6", default-features = false }
uuid = { version = "1", features = ["serde"] }
wit-bindgen = { version = "=0.59.0", default-features = false, features = ["macros", "realloc", "std"] }
