[workspace]
resolver = "2"
members = [
    "apps/decision-server",
    "crates/contracts",
    "crates/decision-grpc",
    "crates/decision-grpc-client",
    "crates/decision-grpc-jwt",
    "crates/decision-grpc-postgres",
    "crates/decision-grpc-server",
    "crates/decision-query",
    "crates/domain",
    "crates/desktop-core",
    "crates/event-store-contracts",
    "crates/event-store-postgres",
    "crates/plugin-contracts",
    "crates/viz",
    "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2024"
license = "Proprietary"
rust-version = "1.95"

[workspace.dependencies]
aws-lc-rs = "=1.17.3"
base64 = "=0.22.1"
cap-fs-ext = "=4.0.2"
cap-std = "=4.0.2"
chrono = { version = "=0.4.45", default-features = false, features = ["serde", "std"] }
deadpool-postgres = { version = "=0.14.1", default-features = false, features = ["rt_tokio_1"] }
http = "=1.4.2"
http-body-util = "=0.1.4"
jsonwebtoken = { version = "=10.4.0", default-features = false, features = ["aws_lc_rs"] }
prost = "0.14.4"
protoc-bin-vendored = "3.2.0"
serde = { version = "1", features = ["derive"] }
serde_jcs = "=0.2.0"
serde_json = "1"
sha2 = "=0.10.9"
rustls = { version = "=0.23.42", default-features = false }
rustix = { version = "=1.1.4", default-features = false, features = ["fs", "process", "std"] }
same-file = "=1.0.6"
socket2 = "=0.6.5"
sqlparser = { version = "=0.62.0", default-features = false, features = ["std"] }
thiserror = "2"
tokio = { version = "=1.53.0", default-features = false }
tokio-postgres = { version = "=0.7.18", default-features = false, features = ["runtime", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-postgres-rustls = { version = "=0.14.0", default-features = false }
tokio-stream = { version = "=0.1.18", default-features = false }
tonic = { version = "0.14.6", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.6"
tonic-prost-build = { version = "0.14.6", default-features = false }
tower = { version = "=0.5.3", default-features = false }
uuid = { version = "1", features = ["serde"] }
wit-bindgen = { version = "=0.59.0", default-features = false, features = ["macros", "realloc", "std"] }
windows = { version = "=0.62.2", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
zeroize = "=1.9.0"
