[package]
name = "bioworld-decision-grpc-jwt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
bioworld-decision-grpc = { path = "../decision-grpc" }
http.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
aws-lc-rs.workspace = true
bioworld-contracts = { path = "../contracts" }
bioworld-decision-query = { path = "../decision-query" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "test-util", "time"] }
tonic.workspace = true
