[package]
name = "bioworld-decision-grpc-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bioworld-decision-grpc = { path = "../decision-grpc" }
bioworld-decision-query = { path = "../decision-query" }
bioworld-event-store-postgres = { path = "../event-store-postgres" }
tokio-postgres.workspace = true

[dev-dependencies]
bioworld-contracts = { path = "../contracts" }
bioworld-event-store-contracts = { path = "../event-store-contracts" }
tonic.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
