[package]
name = "bioworld-decision-grpc-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bioworld-decision-grpc = { path = "../decision-grpc" }
bioworld-decision-query = { path = "../decision-query" }
bioworld-event-store-postgres = { path = "../event-store-postgres" }
deadpool-postgres.workspace = true
tokio-postgres.workspace = true

[dev-dependencies]
aws-lc-rs.workspace = true
base64.workspace = true
bioworld-contracts = { path = "../contracts" }
bioworld-decision-grpc-jwt = { path = "../decision-grpc-jwt" }
bioworld-event-store-contracts = { path = "../event-store-contracts" }
serde_json.workspace = true
tonic.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
