[package]
name = "bioworld-decision-grpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bioworld-contracts = { path = "../contracts" }
bioworld-decision-query = { path = "../decision-query" }
tokio = { workspace = true, features = ["sync", "time"] }
tonic.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
