[package]
name = "bioworld-desktop-decision-grpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bioworld-contracts = { path = "../contracts" }
bioworld-decision-grpc-client = { path = "../decision-grpc-client" }
bioworld-decision-query = { path = "../decision-query" }
bioworld-desktop-core = { path = "../desktop-core" }
thiserror.workspace = true

[dev-dependencies]
bioworld-decision-grpc = { path = "../decision-grpc" }
bioworld-decision-grpc-server = { path = "../decision-grpc-server" }
rcgen = { version = "=0.14.8", default-features = false, features = ["aws_lc_rs", "pem", "zeroize"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
