[package]
name = "bioworld-event-store-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bioworld-contracts = { path = "../contracts" }
bioworld-decision-query = { path = "../decision-query" }
bioworld-event-store-contracts = { path = "../event-store-contracts" }
serde_json.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
